2008-01-14  Aidan Kehoe  <kehoea@parhasard.net>

	* bytecomp.el (byte-compile-output-file-form): 
	Bind print-gensym-alist to nil, as we do within
	byte-compile-output-docform.

2008-01-04  Michael Sperber  <mike@xemacs.org>

        * code-files.el (insert-file-contents):
        (load): Don't call `substitute-in-file-name' on the file name.

2008-01-03  Aidan Kehoe  <kehoea@parhasard.net>

	* cus-edit.el (custom-save-all): 
	If the directory containing the custom file doesn't exist, try to
	create it. Fixes Nick's Crabtree's bug of 
	5fb265820712140145w512fa3bbh355cf76f7e2cf792@mail.gmail.com ;
	thank you Nick.
	* menubar-items.el (default-menubar):
	In the code to edit the user's init file, try to create the
	containing directory if it doesn't exist. 

2008-01-02  Aidan Kehoe  <kehoea@parhasard.net>

	* gtk-init.el (init-post-gtk-win): 
	Trust the X11 code to give us decent default fonts.

2008-01-02  Aidan Kehoe  <kehoea@parhasard.net>

	* x-iso8859-1.el: Removed.
	* gtk-iso8859-1.el: Removed.
	These haven't been used in a year and a half. No need to keep them
	around. 

2008-01-02  Mike Sperber  <mike@xemacs.org>

	* minibuf.el (mouse-read-file-name-1): Use `window-height' instead
	of `frame-height' to be consistent with `split-window''s
	calculations.  Bind `window-min-height' for the whole thing to
	avoid geometry problems with the buttons window.

2008-01-02  Mike Sperber  <mike@xemacs.org>

	* minibuf.el (mouse-read-file-name-1): Make the buttons in the
	dialog frame occupy `window-min-height' lines to avoid problems
	when the window configuration changes---as it does with
	`resize-minibuffer-mode'.

2007-12-31  Aidan Kehoe  <kehoea@parhasard.net>

	* menubar-items.el (default-menubar): 
	Byte compile the specified lambdas. Correct some compile time
	warnings uncovered by this.
	* menubar-items.el (tutorials-menu-filter):
	If a language environment doesn't have an associated POSIX locale
	specified--which indicates we don't want it used except by those